--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
-
 /*
-! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -213,6 +211,8 @@ textarea {
   /* 1 */
   line-height: inherit;
   /* 1 */
+  letter-spacing: inherit;
+  /* 1 */
   color: inherit;
   /* 1 */
   margin: 0;
@@ -236,9 +236,9 @@ select {
 */
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
+input:where([type='button']),
+input:where([type='reset']),
+input:where([type='submit']) {
   -webkit-appearance: button;
   /* 1 */
   background-color: transparent;
@@ -446,7 +446,7 @@ video {
   display: none;
 }
 
-*, ::before, ::after{
+*, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -494,9 +494,13 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+  --tw-contain-size:  ;
+  --tw-contain-layout:  ;
+  --tw-contain-paint:  ;
+  --tw-contain-style:  ;
 }
 
-::backdrop{
+::backdrop {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -544,397 +548,407 @@ video {
   --tw-backdrop-opacity:  ;
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
+  --tw-contain-size:  ;
+  --tw-contain-layout:  ;
+  --tw-contain-paint:  ;
+  --tw-contain-style:  ;
 }
 
-.container{
+.container {
   width: 100%;
 }
 
-@media (min-width: 476px){
-  .container{
+@media (min-width: 476px) {
+  .container {
     max-width: 476px;
   }
 }
 
-@media (min-width: 576px){
-  .container{
+@media (min-width: 576px) {
+  .container {
     max-width: 576px;
   }
 }
 
-@media (min-width: 768px){
-  .container{
+@media (min-width: 768px) {
+  .container {
     max-width: 768px;
   }
 }
 
-@media (min-width: 992px){
-  .container{
+@media (min-width: 992px) {
+  .container {
     max-width: 992px;
   }
 }
 
-@media (min-width: 1281px){
-  .container{
+@media (min-width: 1281px) {
+  .container {
     max-width: 1281px;
   }
 }
 
-.absolute{
+.absolute {
   position: absolute;
 }
 
-.relative{
+.relative {
   position: relative;
 }
 
-.inset-0{
+.inset-0 {
   inset: 0px;
 }
 
-.top-40{
+.top-40 {
   top: 10rem;
 }
 
-.z-10{
+.z-10 {
   z-index: 10;
 }
 
-.z-20{
+.z-20 {
   z-index: 20;
 }
 
-.z-30{
+.z-30 {
   z-index: 30;
 }
 
-.mx-auto{
+.mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.flex{
+.flex {
   display: flex;
 }
 
-.aspect-square{
+.aspect-square {
   aspect-ratio: 1 / 1;
 }
 
-.h-\[300px\]{
+.h-\[300px\] {
   height: 300px;
 }
 
-.h-full{
+.h-full {
   height: 100%;
 }
 
-.max-h-80{
+.max-h-80 {
   max-height: 20rem;
 }
 
-.min-h-screen{
+.min-h-screen {
   min-height: 100vh;
 }
 
-.w-full{
+.w-full {
   width: 100%;
 }
 
-.w-screen{
+.w-screen {
   width: 100vw;
 }
 
-.flex-1{
+.flex-1 {
   flex: 1 1 0%;
 }
 
-.flex-col{
+.flex-col {
   flex-direction: column;
 }
 
-.gap-4{
+.gap-4 {
   gap: 1rem;
 }
 
-.rounded-2xl{
+.rounded-2xl {
   border-radius: 1rem;
 }
 
-.rounded-e-2xl{
+.rounded-e-2xl {
   border-start-end-radius: 1rem;
   border-end-end-radius: 1rem;
 }
 
-.rounded-s-2xl{
+.rounded-s-2xl {
   border-start-start-radius: 1rem;
   border-end-start-radius: 1rem;
 }
 
-.bg-black{
+.bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-white{
+.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-mobile-pattern{
+.bg-mobile-pattern {
   background-image: url('./images/pattern-bg-mobile.png');
 }
 
-.bg-cover{
+.bg-cover {
   background-size: cover;
 }
 
-.bg-no-repeat{
+.bg-no-repeat {
   background-repeat: no-repeat;
 }
 
-.p-7{
+.p-7 {
   padding: 1.75rem;
 }
 
-.px-6{
+.px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
-.pb-1{
+.pb-1 {
   padding-bottom: 0.25rem;
 }
 
-.pt-5{
-  padding-top: 1.25rem;
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
-.pt-\[26px\]{
+.pt-\[26px\] {
   padding-top: 26px;
 }
 
-.pt-\[6px\]{
+.pt-\[6px\] {
   padding-top: 6px;
 }
 
-.text-center{
+.pt-5 {
+  padding-top: 1.25rem;
+}
+
+.pt-\[24px\] {
+  padding-top: 24px;
+}
+
+.text-center {
   text-align: center;
 }
 
-.font-primary{
+.font-primary {
   font-family: Rubik, sans-serif;
 }
 
-.text-\[10px\]{
+.text-\[10px\] {
   font-size: 10px;
 }
 
-.text-\[26px\]{
+.text-\[11px\] {
+  font-size: 11px;
+}
+
+.text-\[26px\] {
   font-size: 26px;
 }
 
-.text-lg{
+.text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-xl{
+.text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-\[11px\]{
-  font-size: 11px;
-}
-
-.font-bold{
+.font-bold {
   font-weight: 700;
 }
 
-.font-medium{
+.font-medium {
   font-weight: 500;
 }
 
-.tracking-tight{
+.tracking-tight {
   letter-spacing: -0.025em;
 }
 
-.tracking-widest{
+.tracking-widest {
   letter-spacing: 0.1em;
 }
 
-.text-Dark-Gray{
+.text-Dark-Gray {
   --tw-text-opacity: 1;
   color: rgb(150 150 150 / var(--tw-text-opacity));
 }
 
-.text-Very-Dark-Gray{
+.text-Very-Dark-Gray {
   --tw-text-opacity: 1;
   color: rgb(43 43 43 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-blue-700{
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
-}
-
-.text-blue-900{
+.text-blue-900 {
   --tw-text-opacity: 1;
   color: rgb(30 58 138 / var(--tw-text-opacity));
 }
 
-.blur{
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.blur {
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.hover\:bg-Very-Dark-Gray:hover{
+.hover\:bg-Very-Dark-Gray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(43 43 43 / var(--tw-bg-opacity));
 }
 
-@media (min-width: 576px){
-  .sm\:px-12{
+@media (min-width: 576px) {
+  .sm\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
   }
 }
 
-@media (min-width: 768px){
-  .md\:px-24{
+@media (min-width: 768px) {
+  .md\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
   }
 }
 
-@media (min-width: 992px){
-  .lg\:aspect-auto{
+@media (min-width: 992px) {
+  .lg\:aspect-auto {
     aspect-ratio: auto;
   }
 
-  .lg\:h-\[280px\]{
+  .lg\:h-\[280px\] {
     height: 280px;
   }
 
-  .lg\:max-h-64{
+  .lg\:max-h-64 {
     max-height: 16rem;
   }
 
-  .lg\:max-w-52{
+  .lg\:max-w-52 {
     max-width: 13rem;
   }
 
-  .lg\:flex-row{
+  .lg\:flex-row {
     flex-direction: row;
   }
 
-  .lg\:gap-0{
+  .lg\:gap-0 {
     gap: 0px;
   }
 
-  .lg\:border-l-2{
+  .lg\:border-l-2 {
     border-left-width: 2px;
   }
 
-  .lg\:bg-desktop-pattern{
+  .lg\:bg-desktop-pattern {
     background-image: url('./images/pattern-bg-desktop.png');
   }
 
-  .lg\:px-0{
+  .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
   }
 
-  .lg\:px-12{
+  .lg\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
   }
 
-  .lg\:px-2{
+  .lg\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
 
-  .lg\:px-52{
+  .lg\:px-52 {
     padding-left: 13rem;
     padding-right: 13rem;
   }
 
-  .lg\:py-9{
+  .lg\:py-9 {
     padding-top: 2.25rem;
     padding-bottom: 2.25rem;
   }
 
-  .lg\:pb-2{
+  .lg\:pb-2 {
     padding-bottom: 0.5rem;
   }
 
-  .lg\:pr-1{
+  .lg\:pr-1 {
     padding-right: 0.25rem;
   }
 
-  .lg\:pt-10{
+  .lg\:pt-10 {
     padding-top: 2.5rem;
   }
 
-  .lg\:pt-6{
+  .lg\:pt-6 {
     padding-top: 1.5rem;
   }
 
-  .lg\:pt-\[22px\]{
+  .lg\:pt-\[22px\] {
     padding-top: 22px;
   }
 
-  .lg\:text-2xl{
+  .lg\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
   }
 
-  .lg\:text-\[32px\]{
+  .lg\:text-\[32px\] {
     font-size: 32px;
   }
 
-  .lg\:text-xs{
+  .lg\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
   }
 
-  .lg\:tracking-normal{
+  .lg\:tracking-normal {
     letter-spacing: 0em;
   }
 }
 
-@media (min-width: 1280px){
-  .xl\:max-w-44{
+@media (min-width: 1281px) {
+  .xl\:max-w-44 {
     max-width: 11rem;
   }
 
-  .xl\:px-\[362px\]{
+  .xl\:px-\[362px\] {
     padding-left: 362px;
     padding-right: 362px;
   }
 
-  .xl\:px-\[84px\]{
+  .xl\:px-\[84px\] {
     padding-left: 84px;
     padding-right: 84px;
   }
 
-  .xl\:pl-8{
+  .xl\:pl-8 {
     padding-left: 2rem;
   }
 
-  .xl\:pr-16{
+  .xl\:pr-16 {
     padding-right: 4rem;
   }
 
-  .xl\:text-left{
+  .xl\:text-left {
     text-align: left;
   }
 }
-
